# clidestable

./: Caddyfile  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
clidestable/: __init__.py  cli.py  server.py  stall.py
templates/: dashboard.html  log.html  split.html  stall.html
tests/: test_server.py  test_stall.py
