[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "clidestable"
version = "0.1.0"
description = "VPS-side session server for clidesdale"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["flask>=3.0"]

[tool.setuptools.packages.find]
include = ["clidestable*"]

[project.scripts]
clidestable = "clidestable.cli:main"
